# text-to-speech-app

./: .gitignore  pyproject.toml  requirements.txt
conf/: README.md  gunicorn_start  nginx.conf  supervisor.conf
tests/: test_text_to_audiobook_app.py
text_to_audiobook_app/: manage.py
text_to_audiobook_app/api/: utils.py
text_to_audiobook_app/text/: admin.py  feeds.py  forms.py  models.py  utils.py  views.py
text_to_audiobook_app/text/migrations/: 0001_initial.py  0002_textfile_mp3_file.py  0003_textfile_status.py  0004_image.py  0005_image_text_file.py  0006_webpage.py  0007_textfile_date_added_alter_image_text_file_and_more.py  0008_alter_textfile_date_added.py
text_to_audiobook_app/text/templates/: extract_text.html  index.html  modify.html  modify_text.html  view_text_file.html
text_to_audiobook_app/text_to_audiobook_app/: asgi.py  settings.py  urls.py  wsgi.py
